# lingueez

./: .gitignore  CLA.md  CONTRIBUTING.md  LICENSE.txt  NOTICE  README.md  README.uk.md  THIRD-PARTY-LICENSES.md  lingueez.iss  lingueez.spec  main.py  meson.build  pyproject.toml  requirements-dev.txt  requirements.txt  run.sh
.github/: FUNDING.yml
.github/workflows/: ci.yml  flatpak.yml  release.yml  test-build.yml
app/: config.py  i18n.py  version.py
app/core/: accounts.py  ai.py  audio.py  auth_manager.py  backup_management.py  data_management.py  database_adapter.py  db.py  diagnostics.py  errors.py  exporters.py  google_cloud_tts.py  gpt.py  importer.py  log_redaction.py  progression.py  secure_store.py  shell_utils.py  srs.py  stats.py  supabase_client.py  supabase_schema.py  sync_manager.py  text_sources.py  translator.py  updater.py
app/system/: autostart.py  hotkey_agent.py  hotkey_env.py  package_env.py
app/ui/: __init__.py  animations.py  brand_wordmark.py  charts.py  delegates.py  flashcards_page.py  icons.py  legal_links.py  main_window.py  mini_player.py  (+13 more)
docs/: CNAME  _config.yml  download.html  index.html  koreader-link.html  koreader.html
locales/: uk.py
tests/: __init__.py  _demo_welcome_icon_anim.py  test_accounts_and_store.py  test_ai_report.py  test_collision.py  test_contribution.py  test_i18n.py  test_import_dedup.py  test_log_redaction.py  test_migration.py  test_package_env.py  test_progress_sync.py  test_progression.py  test_smoke_imports.py  test_srs.py  test_stats.py  test_sync_push.py  test_sync_roundtrip.py  test_uuid_ids.py
(+50 files in other folders)
